[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:strolax/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
exclude = docs
max-line-length = 120

[pycodestyle]
max-line-length = 120

[metadata]
description-file=README.md
license_files=LICENSE.rst
